<resources>
    <string name="app_name">ECG MONITOR</string>
    <string name="default_lead">ECG/EKG</string>
    <string-array name="leads_array">
        <item>ECG/EKG</item>
        <item>limb leads</item>
        <item>pre-cordial</item>
        <item>lead I</item>
        <item>lead II</item>
        <item>lead III</item>
        <item>aVF</item>
        <item>aVR</item>
        <item>aVL</item>
        <item>V1</item>
        <item>V2</item>
        <item>V3</item>
        <item>V4</item>
        <item>V5</item>
        <item>V6</item>
    </string-array>
    <string name="verification">Verification</string>
    <string name="resend_code">Resend Code</string>
    <string name="in_60_seconds">in 60 Seconds</string>
    <string name="enter_the_code_that_was_just_sent_to">Enter The Code That Was Just Sent To</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don’t Have An Account?</string>
    <string name="click_here">Click Here</string>

</resources>