<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogIn">
   <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="12">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="50dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="vertical">
                <TextView
                    android:fontFamily="@font/montserrat_regular"
                    android:letterSpacing=".1"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textSize="@dimen/parent_header_size"
                    android:textColor="@color/red"/>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/montserrat_regular"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:textSize="@dimen/child_header_size"
                        android:textColor="@color/black"/>

                    <RelativeLayout
                        android:layout_marginLeft="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">
                        <EditText
                            android:fontFamily="@font/montserrat_regular"
                            android:layout_centerVertical="true"
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_your_email"
                            android:textSize="@dimen/edit_text_size"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/grey"
                            android:textColor="@color/black"
                            android:background="@null"
                            android:focusableInTouchMode="true"
                            android:cursorVisible="false"
                            android:focusable="false"
                            />
                        <ImageView
                            android:layout_centerVertical="true"
                            android:id="@+id/validate_email"
                            android:layout_marginEnd="15dp"
                            android:layout_alignParentEnd="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/baseline_arrow_circle_right_24"
                            android:backgroundTint="@color/grey"
                            />

                        <View
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black"/>

                    </RelativeLayout>
                    <TextView
                        android:fontFamily="@font/montserrat_regular"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textStyle="bold"
                        android:textSize="@dimen/child_header_size"
                        android:textColor="@color/black"/>
                    <RelativeLayout
                        android:layout_marginLeft="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <EditText
                            android:fontFamily="@font/montserrat_regular"
                            android:layout_centerVertical="true"
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_password"
                            android:inputType="textPassword"
                            android:textSize="@dimen/edit_text_size"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/grey"
                            android:textColor="@color/black"
                            android:background="@null"
                            android:focusableInTouchMode="true"
                            android:cursorVisible="false"
                            android:focusable="false"
                            />
                        <ImageView
                            android:layout_centerVertical="true"
                            android:id="@+id/validate_password"
                            android:layout_marginEnd="15dp"
                            android:layout_alignParentEnd="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/baseline_arrow_circle_right_24"
                            android:backgroundTint="@color/grey"
                            />
                        <View
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black"/>

                    </RelativeLayout>
                    <TextView
                        android:fontFamily="@font/montserrat_regular"
                        android:id="@+id/forgot_password"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textStyle="bold"
                        android:textSize="@dimen/child_header_size"
                        android:textColor="@color/black"/>



                </LinearLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <LinearLayout
                    android:layout_marginBottom="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:fontFamily="@font/montserrat_regular"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_an_account"
                        android:textStyle="bold"
                        android:textSize="@dimen/child_header_size"
                        android:textColor="@color/grey"/>
                    <TextView
                        android:fontFamily="@font/montserrat_regular"
                        android:id="@+id/click_here"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/click_here"
                        android:textStyle="bold"
                        android:textSize="@dimen/child_header_size"
                        android:textColor="@color/black"/>
                </LinearLayout>


            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>