<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OtpVerificationActivity">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="@font/montserrat_regular"
                    android:letterSpacing=".1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verification"
                    android:textColor="@color/red"
                    android:textSize="@dimen/parent_header_size"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/montserrat_regular"
                    android:id="@+id/mtext_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/edit_text_size"
                    android:textStyle="bold"
                    android:text="@string/enter_the_code_that_was_just_sent_to"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_below="@+id/mtext_one"
                    android:id="@+id/mtext_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/edit_text_size"
                    android:text="xyz@braneenterprises.com"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>
            <RelativeLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_margin="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:fontFamily="@font/montserrat_regular"
                        android:id="@+id/edit_one"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:backgroundTint="@color/black"/>
                    <EditText
                        android:fontFamily="@font/montserrat_regular"
                        android:id="@+id/edit_two"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:backgroundTint="@color/black"/>
                    <EditText
                        android:fontFamily="@font/montserrat_regular"
                        android:id="@+id/edit_three"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:backgroundTint="@color/black"/>
                    <EditText
                        android:fontFamily="@font/montserrat_regular"
                        android:id="@+id/edit_four"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:backgroundTint="@color/black"/>
                    <EditText
                        android:fontFamily="@font/montserrat_regular"
                        android:id="@+id/edit_five"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:backgroundTint="@color/black"/>
                    <EditText
                        android:fontFamily="@font/montserrat_regular"
                        android:id="@+id/edit_six"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:maxLength="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:backgroundTint="@color/black"/>
                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_code"
                android:id="@+id/resend_text_view"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="@dimen/edit_text_size" />
            <TextView
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_60_seconds"
                android:id="@+id/time_text_view"
                android:textColor="@color/grey"
                android:textSize="@dimen/edit_text_size"
                android:textStyle="bold"/>

        </LinearLayout>
</RelativeLayout>